--- a/galleries/index.html
+++ b/galleries/index.html
@@ -2,12 +2,12 @@
 <html prefix="og: http://ogp.me/ns# article: http://ogp.me/ns/article# " lang="en">
 <head>
 <meta charset="utf-8">
-<base href="http://mssngwnkl.com/galleries/">
+<base href="http://demba.github.io/tstblg/galleries/">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>galleries | Testing Nikola Workflow</title>
 <link href="../assets/css/all-nocdn.css" rel="stylesheet" type="text/css">
 <link rel="alternate" type="application/rss+xml" title="RSS" href="../rss.xml">
-<link rel="canonical" href="http://mssngwnkl.com/galleries/">
+<link rel="canonical" href="http://demba.github.io/tstblg/galleries/">
 <!--[if lt IE 9]><script src="../assets/js/html5.js"></script><![endif]--><link rel="alternate" type="application/rss+xml" title="RSS" href="rss.xml">
 <style type="text/css">
     .image-block {
@@ -32,7 +32,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="http://mssngwnkl.com/">
+            <a class="navbar-brand" href="http://demba.github.io/tstblg/">
 
                 <span id="blog-title">Testing Nikola Workflow</span>
             </a>
