Nikola auto commit.
Source commit: 2dee298d5ffb396e05bbaf52055d33bdd6eb90dc
Nikola version: 7.6.3

--- a/archive.html
+++ b/archive.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html prefix="og: http://ogp.me/ns# article: http://ogp.me/ns/article# " lang="en">
+<html prefix="
+og: http://ogp.me/ns#
+article: http://ogp.me/ns/article#
+" lang="en">
 <head>
 <meta charset="utf-8">
-<base href="http://demba.github.io/tstblg/archive.html">
 <meta name="description" content="This is a site where I play with Nikola commands and config">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Archive | Testing Nikola Workflow</title>
@@ -34,7 +36,10 @@
         <div class="collapse navbar-collapse" id="bs-navbar" aria-expanded="false">
             <ul class="nav navbar-nav">
 <li class="active">
-<a href="#">Archive <span class="sr-only">(active)</span></a>
+<a href="#">Archive</a>
+                </li>
+<li>
+<a href="stories/cv/index.html">CV</a>
                 </li>
 <li>
 <a href="categories/">Tags</a>
@@ -55,7 +60,6 @@
         <!--Body content-->
         <div class="row">
             
-            
 <article class="listpage"><header><h1>Archive</h1>
     </header><ul class="postlist"><li>
 <a href="2015/">2015</a>
@@ -69,7 +73,6 @@
         </footer>
 </div>
 </div>
-
 
             <script src="assets/js/all-nocdn.js"></script><script>$('a.image-reference:not(.islink) img:not(.islink)').parent().colorbox({rel:"gal",maxWidth:"100%",maxHeight:"100%",scalePhotos:true});</script><!-- fancy dates --><script>
     moment.locale("");
