--- a/listings/index.html
+++ b/listings/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html prefix="og: http://ogp.me/ns# article: http://ogp.me/ns/article# " lang="en">
+<html prefix="
+og: http://ogp.me/ns#
+article: http://ogp.me/ns/article#
+" lang="en">
 <head>
 <meta charset="utf-8">
-<base href="http://demba.github.io/tstblg/listings/">
 <meta name="description" content="listings">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>listings | Testing Nikola Workflow</title>
@@ -37,6 +39,9 @@
 <a href="../archive.html">Archive</a>
                 </li>
 <li>
+<a href="../stories/cv/index.html">CV</a>
+                </li>
+<li>
 <a href="../categories/">Tags</a>
                 </li>
 <li>
@@ -55,8 +60,6 @@
         <!--Body content-->
         <div class="row">
             
-            
-
 <nav class="breadcrumbs"><ul class="breadcrumb">
 <li><a href=".">listings</a></li>
 </ul></nav>
@@ -69,7 +72,6 @@
         </footer>
 </div>
 </div>
-
 
             <script src="../assets/js/all-nocdn.js"></script><script>$('a.image-reference:not(.islink) img:not(.islink)').parent().colorbox({rel:"gal",maxWidth:"100%",maxHeight:"100%",scalePhotos:true});</script><!-- fancy dates --><script>
     moment.locale("");
